y.output
Terminals unused in grammar

   FOR


Grammar

    0 $accept: Program $end

    1 Program: MainClass ClassDeclList

    2 ClassDeclList: ClassDeclList ClassDecl
    3              | %empty

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id ')' '{' Statement '}' '}'

    5 ClassDecl: CLASS id '{' VarDeclList MethodDeclList '}'
    6          | CLASS id EXTENDS id '{' VarDeclList MethodDeclList '}'

    7 VarDeclList: VarDeclList VarDecl
    8            | %empty

    9 VarDecl: TypePrime id ';'
   10        | id id ';'

   11 MethodDeclList: MethodDeclList MethodDecl
   12               | %empty

   13 MethodDecl: PUBLIC Type id '(' FormalList ')' '{' VarDeclList StatementList RETURN Exp ';' '}'
   14           | PUBLIC Type id '(' FormalList ')' '{' VarDeclList RETURN Exp ';' '}'

   15 FormalList: Type id FormalRestList
   16           | %empty

   17 FormalRestList: FormalRestList FormalRest
   18               | %empty

   19 FormalRest: ',' Type id

   20 Type: PrimType
   21     | Type '[' ']'

   22 PrimType: INT
   23         | BOOLEAN
   24         | id

   25 TypePrime: PrimTypePrime
   26          | TypePrime '[' ']'
   27          | id '[' ']'

   28 PrimTypePrime: INT
   29              | BOOLEAN

   30 StatementList: StatementList Statement
   31              | Statement

   32 Statement: '{' StatementList '}'
   33          | '{' '}'
   34          | IF '(' Exp ')' Statement ELSE Statement
   35          | WHILE '(' Exp ')' Statement
   36          | PRINTLN '(' Exp ')' ';'
   37          | PRINTLN '(' STRINGLITERAL ')' ';'
   38          | PRINT '(' Exp ')' ';'
   39          | PRINT '(' STRINGLITERAL ')' ';'
   40          | id '=' Exp ';'
   41          | id Index '=' Exp ';'
   42          | RETURN Exp ';'

   43 Index: '[' Exp ']'
   44      | Index '[' Exp ']'

   45 Exp: Exp AND Exp
   46    | Exp OR Exp
   47    | Exp EQ Exp
   48    | Exp NOTEQ Exp
   49    | Exp LESSTHANEQ Exp
   50    | Exp GREATTHANEQ Exp
   51    | Exp '<' Exp
   52    | Exp '>' Exp
   53    | Exp '+' Exp
   54    | Exp '-' Exp
   55    | Exp '*' Exp
   56    | Exp '/' Exp
   57    | '!' Exp
   58    | '-' Exp
   59    | '+' Exp
   60    | INTEGERLITERAL
   61    | TRUE
   62    | FALSE
   63    | Object
   64    | '(' Exp ')'
   65    | id Index
   66    | id '.' LENGTH
   67    | id Index '.' LENGTH
   68    | id '.' id '(' ExpList ')'
   69    | ObjectPrime '.' id '(' ExpList ')'

   70 Object: id
   71       | THIS
   72       | NEW id '(' ')'
   73       | NEW PrimType Index

   74 ObjectPrime: THIS
   75            | NEW id '(' ')'
   76            | NEW PrimType Index

   77 ExpList: Exp ExpRestList
   78        | %empty

   79 ExpRestList: ExpRestList ExpRest
   80            | %empty

   81 ExpRest: ',' Exp


Terminals, with rules where they appear

$end (0) 0
'!' (33) 57
'(' (40) 4 13 14 34 35 36 37 38 39 64 68 69 72 75
')' (41) 4 13 14 34 35 36 37 38 39 64 68 69 72 75
'*' (42) 55
'+' (43) 53 59
',' (44) 19 81
'-' (45) 54 58
'.' (46) 66 67 68 69
'/' (47) 56
';' (59) 9 10 13 14 36 37 38 39 40 41 42
'<' (60) 51
'=' (61) 40 41
'>' (62) 52
'[' (91) 4 21 26 27 43 44
']' (93) 4 21 26 27 43 44
'{' (123) 4 5 6 13 14 32 33
'}' (125) 4 5 6 13 14 32 33
error (256)
id (258) 4 5 6 9 10 13 14 15 19 24 27 40 41 65 66 67 68 69 70 72 75
STRINGLITERAL (259) 37 39
INTEGERLITERAL (260) 60
FOR (261)
CLASS (262) 4 5 6
PUBLIC (263) 4 13 14
STATIC (264) 4
VOID (265) 4
MAIN (266) 4
STRING (267) 4
EXTENDS (268) 6
RETURN (269) 13 14 42
INT (270) 22 28
BOOLEAN (271) 23 29
IF (272) 34
ELSE (273) 34
WHILE (274) 35
PRINT (275) 38 39
PRINTLN (276) 36 37
LENGTH (277) 66 67
TRUE (278) 61
FALSE (279) 62
THIS (280) 71 74
NEW (281) 72 73 75 76
AND (282) 45
OR (283) 46
LESSTHANEQ (284) 49
GREATTHANEQ (285) 50
EQ (286) 47
NOTEQ (287) 48


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
Program (51)
    on left: 1, on right: 0
ClassDeclList (52)
    on left: 2 3, on right: 1 2
MainClass (53)
    on left: 4, on right: 1
ClassDecl (54)
    on left: 5 6, on right: 2
VarDeclList (55)
    on left: 7 8, on right: 5 6 7 13 14
VarDecl (56)
    on left: 9 10, on right: 7
MethodDeclList (57)
    on left: 11 12, on right: 5 6 11
MethodDecl (58)
    on left: 13 14, on right: 11
FormalList (59)
    on left: 15 16, on right: 13 14
FormalRestList (60)
    on left: 17 18, on right: 15 17
FormalRest (61)
    on left: 19, on right: 17
Type (62)
    on left: 20 21, on right: 13 14 15 19 21
PrimType (63)
    on left: 22 23 24, on right: 20 73 76
TypePrime (64)
    on left: 25 26 27, on right: 9 26
PrimTypePrime (65)
    on left: 28 29, on right: 25
StatementList (66)
    on left: 30 31, on right: 13 30 32
Statement (67)
    on left: 32 33 34 35 36 37 38 39 40 41 42, on right: 4 30 31 34
    35
Index (68)
    on left: 43 44, on right: 41 44 65 67 73 76
Exp (69)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69, on right: 13 14 34 35 36 38 40 41 42 43 44
    45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 64 77 81
Object (70)
    on left: 70 71 72 73, on right: 63
ObjectPrime (71)
    on left: 74 75 76, on right: 69
ExpList (72)
    on left: 77 78, on right: 68 69
ExpRestList (73)
    on left: 79 80, on right: 77 79
ExpRest (74)
    on left: 81, on right: 79


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    4 MainClass: CLASS . id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id ')' '{' Statement '}' '}'

    id  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass . ClassDeclList

    $default  reduce using rule 3 (ClassDeclList)

    ClassDeclList  go to state 6


State 4

    4 MainClass: CLASS id . '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id ')' '{' Statement '}' '}'

    '{'  shift, and go to state 7


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: MainClass ClassDeclList .
    2 ClassDeclList: ClassDeclList . ClassDecl

    CLASS  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 9


State 7

    4 MainClass: CLASS id '{' . PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id ')' '{' Statement '}' '}'

    PUBLIC  shift, and go to state 10


State 8

    5 ClassDecl: CLASS . id '{' VarDeclList MethodDeclList '}'
    6          | CLASS . id EXTENDS id '{' VarDeclList MethodDeclList '}'

    id  shift, and go to state 11


State 9

    2 ClassDeclList: ClassDeclList ClassDecl .

    $default  reduce using rule 2 (ClassDeclList)


State 10

    4 MainClass: CLASS id '{' PUBLIC . STATIC VOID MAIN '(' STRING '[' ']' id ')' '{' Statement '}' '}'

    STATIC  shift, and go to state 12


State 11

    5 ClassDecl: CLASS id . '{' VarDeclList MethodDeclList '}'
    6          | CLASS id . EXTENDS id '{' VarDeclList MethodDeclList '}'

    EXTENDS  shift, and go to state 13
    '{'      shift, and go to state 14


State 12

    4 MainClass: CLASS id '{' PUBLIC STATIC . VOID MAIN '(' STRING '[' ']' id ')' '{' Statement '}' '}'

    VOID  shift, and go to state 15


State 13

    6 ClassDecl: CLASS id EXTENDS . id '{' VarDeclList MethodDeclList '}'

    id  shift, and go to state 16


State 14

    5 ClassDecl: CLASS id '{' . VarDeclList MethodDeclList '}'

    $default  reduce using rule 8 (VarDeclList)

    VarDeclList  go to state 17


State 15

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID . MAIN '(' STRING '[' ']' id ')' '{' Statement '}' '}'

    MAIN  shift, and go to state 18


State 16

    6 ClassDecl: CLASS id EXTENDS id . '{' VarDeclList MethodDeclList '}'

    '{'  shift, and go to state 19


State 17

    5 ClassDecl: CLASS id '{' VarDeclList . MethodDeclList '}'
    7 VarDeclList: VarDeclList . VarDecl

    id       shift, and go to state 20
    INT      shift, and go to state 21
    BOOLEAN  shift, and go to state 22

    $default  reduce using rule 12 (MethodDeclList)

    VarDecl         go to state 23
    MethodDeclList  go to state 24
    TypePrime       go to state 25
    PrimTypePrime   go to state 26


State 18

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN . '(' STRING '[' ']' id ')' '{' Statement '}' '}'

    '('  shift, and go to state 27


State 19

    6 ClassDecl: CLASS id EXTENDS id '{' . VarDeclList MethodDeclList '}'

    $default  reduce using rule 8 (VarDeclList)

    VarDeclList  go to state 28


State 20

   10 VarDecl: id . id ';'
   27 TypePrime: id . '[' ']'

    id   shift, and go to state 29
    '['  shift, and go to state 30


State 21

   28 PrimTypePrime: INT .

    $default  reduce using rule 28 (PrimTypePrime)


State 22

   29 PrimTypePrime: BOOLEAN .

    $default  reduce using rule 29 (PrimTypePrime)


State 23

    7 VarDeclList: VarDeclList VarDecl .

    $default  reduce using rule 7 (VarDeclList)


State 24

    5 ClassDecl: CLASS id '{' VarDeclList MethodDeclList . '}'
   11 MethodDeclList: MethodDeclList . MethodDecl

    PUBLIC  shift, and go to state 31
    '}'     shift, and go to state 32

    MethodDecl  go to state 33


State 25

    9 VarDecl: TypePrime . id ';'
   26 TypePrime: TypePrime . '[' ']'

    id   shift, and go to state 34
    '['  shift, and go to state 35


State 26

   25 TypePrime: PrimTypePrime .

    $default  reduce using rule 25 (TypePrime)


State 27

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' . STRING '[' ']' id ')' '{' Statement '}' '}'

    STRING  shift, and go to state 36


State 28

    6 ClassDecl: CLASS id EXTENDS id '{' VarDeclList . MethodDeclList '}'
    7 VarDeclList: VarDeclList . VarDecl

    id       shift, and go to state 20
    INT      shift, and go to state 21
    BOOLEAN  shift, and go to state 22

    $default  reduce using rule 12 (MethodDeclList)

    VarDecl         go to state 23
    MethodDeclList  go to state 37
    TypePrime       go to state 25
    PrimTypePrime   go to state 26


State 29

   10 VarDecl: id id . ';'

    ';'  shift, and go to state 38


State 30

   27 TypePrime: id '[' . ']'

    ']'  shift, and go to state 39


State 31

   13 MethodDecl: PUBLIC . Type id '(' FormalList ')' '{' VarDeclList StatementList RETURN Exp ';' '}'
   14           | PUBLIC . Type id '(' FormalList ')' '{' VarDeclList RETURN Exp ';' '}'

    id       shift, and go to state 40
    INT      shift, and go to state 41
    BOOLEAN  shift, and go to state 42

    Type      go to state 43
    PrimType  go to state 44


State 32

    5 ClassDecl: CLASS id '{' VarDeclList MethodDeclList '}' .

    $default  reduce using rule 5 (ClassDecl)


State 33

   11 MethodDeclList: MethodDeclList MethodDecl .

    $default  reduce using rule 11 (MethodDeclList)


State 34

    9 VarDecl: TypePrime id . ';'

    ';'  shift, and go to state 45


State 35

   26 TypePrime: TypePrime '[' . ']'

    ']'  shift, and go to state 46


State 36

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING . '[' ']' id ')' '{' Statement '}' '}'

    '['  shift, and go to state 47


State 37

    6 ClassDecl: CLASS id EXTENDS id '{' VarDeclList MethodDeclList . '}'
   11 MethodDeclList: MethodDeclList . MethodDecl

    PUBLIC  shift, and go to state 31
    '}'     shift, and go to state 48

    MethodDecl  go to state 33


State 38

   10 VarDecl: id id ';' .

    $default  reduce using rule 10 (VarDecl)


State 39

   27 TypePrime: id '[' ']' .

    $default  reduce using rule 27 (TypePrime)


State 40

   24 PrimType: id .

    $default  reduce using rule 24 (PrimType)


State 41

   22 PrimType: INT .

    $default  reduce using rule 22 (PrimType)


State 42

   23 PrimType: BOOLEAN .

    $default  reduce using rule 23 (PrimType)


State 43

   13 MethodDecl: PUBLIC Type . id '(' FormalList ')' '{' VarDeclList StatementList RETURN Exp ';' '}'
   14           | PUBLIC Type . id '(' FormalList ')' '{' VarDeclList RETURN Exp ';' '}'
   21 Type: Type . '[' ']'

    id   shift, and go to state 49
    '['  shift, and go to state 50


State 44

   20 Type: PrimType .

    $default  reduce using rule 20 (Type)


State 45

    9 VarDecl: TypePrime id ';' .

    $default  reduce using rule 9 (VarDecl)


State 46

   26 TypePrime: TypePrime '[' ']' .

    $default  reduce using rule 26 (TypePrime)


State 47

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' . ']' id ')' '{' Statement '}' '}'

    ']'  shift, and go to state 51


State 48

    6 ClassDecl: CLASS id EXTENDS id '{' VarDeclList MethodDeclList '}' .

    $default  reduce using rule 6 (ClassDecl)


State 49

   13 MethodDecl: PUBLIC Type id . '(' FormalList ')' '{' VarDeclList StatementList RETURN Exp ';' '}'
   14           | PUBLIC Type id . '(' FormalList ')' '{' VarDeclList RETURN Exp ';' '}'

    '('  shift, and go to state 52


State 50

   21 Type: Type '[' . ']'

    ']'  shift, and go to state 53


State 51

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' . id ')' '{' Statement '}' '}'

    id  shift, and go to state 54


State 52

   13 MethodDecl: PUBLIC Type id '(' . FormalList ')' '{' VarDeclList StatementList RETURN Exp ';' '}'
   14           | PUBLIC Type id '(' . FormalList ')' '{' VarDeclList RETURN Exp ';' '}'

    id       shift, and go to state 40
    INT      shift, and go to state 41
    BOOLEAN  shift, and go to state 42

    $default  reduce using rule 16 (FormalList)

    FormalList  go to state 55
    Type        go to state 56
    PrimType    go to state 44


State 53

   21 Type: Type '[' ']' .

    $default  reduce using rule 21 (Type)


State 54

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id . ')' '{' Statement '}' '}'

    ')'  shift, and go to state 57


State 55

   13 MethodDecl: PUBLIC Type id '(' FormalList . ')' '{' VarDeclList StatementList RETURN Exp ';' '}'
   14           | PUBLIC Type id '(' FormalList . ')' '{' VarDeclList RETURN Exp ';' '}'

    ')'  shift, and go to state 58


State 56

   15 FormalList: Type . id FormalRestList
   21 Type: Type . '[' ']'

    id   shift, and go to state 59
    '['  shift, and go to state 50


State 57

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id ')' . '{' Statement '}' '}'

    '{'  shift, and go to state 60


State 58

   13 MethodDecl: PUBLIC Type id '(' FormalList ')' . '{' VarDeclList StatementList RETURN Exp ';' '}'
   14           | PUBLIC Type id '(' FormalList ')' . '{' VarDeclList RETURN Exp ';' '}'

    '{'  shift, and go to state 61


State 59

   15 FormalList: Type id . FormalRestList

    $default  reduce using rule 18 (FormalRestList)

    FormalRestList  go to state 62


State 60

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id ')' '{' . Statement '}' '}'

    id       shift, and go to state 63
    RETURN   shift, and go to state 64
    IF       shift, and go to state 65
    WHILE    shift, and go to state 66
    PRINT    shift, and go to state 67
    PRINTLN  shift, and go to state 68
    '{'      shift, and go to state 69

    Statement  go to state 70


State 61

   13 MethodDecl: PUBLIC Type id '(' FormalList ')' '{' . VarDeclList StatementList RETURN Exp ';' '}'
   14           | PUBLIC Type id '(' FormalList ')' '{' . VarDeclList RETURN Exp ';' '}'

    $default  reduce using rule 8 (VarDeclList)

    VarDeclList  go to state 71


State 62

   15 FormalList: Type id FormalRestList .
   17 FormalRestList: FormalRestList . FormalRest

    ','  shift, and go to state 72

    $default  reduce using rule 15 (FormalList)

    FormalRest  go to state 73


State 63

   40 Statement: id . '=' Exp ';'
   41          | id . Index '=' Exp ';'

    '['  shift, and go to state 74
    '='  shift, and go to state 75

    Index  go to state 76


State 64

   42 Statement: RETURN . Exp ';'

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 87
    Object       go to state 88
    ObjectPrime  go to state 89


State 65

   34 Statement: IF . '(' Exp ')' Statement ELSE Statement

    '('  shift, and go to state 90


State 66

   35 Statement: WHILE . '(' Exp ')' Statement

    '('  shift, and go to state 91


State 67

   38 Statement: PRINT . '(' Exp ')' ';'
   39          | PRINT . '(' STRINGLITERAL ')' ';'

    '('  shift, and go to state 92


State 68

   36 Statement: PRINTLN . '(' Exp ')' ';'
   37          | PRINTLN . '(' STRINGLITERAL ')' ';'

    '('  shift, and go to state 93


State 69

   32 Statement: '{' . StatementList '}'
   33          | '{' . '}'

    id       shift, and go to state 63
    RETURN   shift, and go to state 64
    IF       shift, and go to state 65
    WHILE    shift, and go to state 66
    PRINT    shift, and go to state 67
    PRINTLN  shift, and go to state 68
    '{'      shift, and go to state 69
    '}'      shift, and go to state 94

    StatementList  go to state 95
    Statement      go to state 96


State 70

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id ')' '{' Statement . '}' '}'

    '}'  shift, and go to state 97


State 71

    7 VarDeclList: VarDeclList . VarDecl
   13 MethodDecl: PUBLIC Type id '(' FormalList ')' '{' VarDeclList . StatementList RETURN Exp ';' '}'
   14           | PUBLIC Type id '(' FormalList ')' '{' VarDeclList . RETURN Exp ';' '}'

    id       shift, and go to state 98
    RETURN   shift, and go to state 99
    INT      shift, and go to state 21
    BOOLEAN  shift, and go to state 22
    IF       shift, and go to state 65
    WHILE    shift, and go to state 66
    PRINT    shift, and go to state 67
    PRINTLN  shift, and go to state 68
    '{'      shift, and go to state 69

    VarDecl        go to state 23
    TypePrime      go to state 25
    PrimTypePrime  go to state 26
    StatementList  go to state 100
    Statement      go to state 96


State 72

   19 FormalRest: ',' . Type id

    id       shift, and go to state 40
    INT      shift, and go to state 41
    BOOLEAN  shift, and go to state 42

    Type      go to state 101
    PrimType  go to state 44


State 73

   17 FormalRestList: FormalRestList FormalRest .

    $default  reduce using rule 17 (FormalRestList)


State 74

   43 Index: '[' . Exp ']'

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 102
    Object       go to state 88
    ObjectPrime  go to state 89


State 75

   40 Statement: id '=' . Exp ';'

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 103
    Object       go to state 88
    ObjectPrime  go to state 89


State 76

   41 Statement: id Index . '=' Exp ';'
   44 Index: Index . '[' Exp ']'

    '['  shift, and go to state 104
    '='  shift, and go to state 105


State 77

   65 Exp: id . Index
   66    | id . '.' LENGTH
   67    | id . Index '.' LENGTH
   68    | id . '.' id '(' ExpList ')'
   70 Object: id .

    '['  shift, and go to state 74
    '.'  shift, and go to state 106

    $default  reduce using rule 70 (Object)

    Index  go to state 107


State 78

   60 Exp: INTEGERLITERAL .

    $default  reduce using rule 60 (Exp)


State 79

   61 Exp: TRUE .

    $default  reduce using rule 61 (Exp)


State 80

   62 Exp: FALSE .

    $default  reduce using rule 62 (Exp)


State 81

   71 Object: THIS .
   74 ObjectPrime: THIS .

    '.'       reduce using rule 74 (ObjectPrime)
    $default  reduce using rule 71 (Object)


State 82

   72 Object: NEW . id '(' ')'
   73       | NEW . PrimType Index
   75 ObjectPrime: NEW . id '(' ')'
   76            | NEW . PrimType Index

    id       shift, and go to state 108
    INT      shift, and go to state 41
    BOOLEAN  shift, and go to state 42

    PrimType  go to state 109


State 83

   59 Exp: '+' . Exp

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 110
    Object       go to state 88
    ObjectPrime  go to state 89


State 84

   58 Exp: '-' . Exp

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 111
    Object       go to state 88
    ObjectPrime  go to state 89


State 85

   57 Exp: '!' . Exp

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 112
    Object       go to state 88
    ObjectPrime  go to state 89


State 86

   64 Exp: '(' . Exp ')'

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 113
    Object       go to state 88
    ObjectPrime  go to state 89


State 87

   42 Statement: RETURN Exp . ';'
   45 Exp: Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . EQ Exp
   48    | Exp . NOTEQ Exp
   49    | Exp . LESSTHANEQ Exp
   50    | Exp . GREATTHANEQ Exp
   51    | Exp . '<' Exp
   52    | Exp . '>' Exp
   53    | Exp . '+' Exp
   54    | Exp . '-' Exp
   55    | Exp . '*' Exp
   56    | Exp . '/' Exp

    AND          shift, and go to state 114
    OR           shift, and go to state 115
    LESSTHANEQ   shift, and go to state 116
    GREATTHANEQ  shift, and go to state 117
    EQ           shift, and go to state 118
    NOTEQ        shift, and go to state 119
    '+'          shift, and go to state 120
    '-'          shift, and go to state 121
    '*'          shift, and go to state 122
    '/'          shift, and go to state 123
    '<'          shift, and go to state 124
    '>'          shift, and go to state 125
    ';'          shift, and go to state 126


State 88

   63 Exp: Object .

    $default  reduce using rule 63 (Exp)


State 89

   69 Exp: ObjectPrime . '.' id '(' ExpList ')'

    '.'  shift, and go to state 127


State 90

   34 Statement: IF '(' . Exp ')' Statement ELSE Statement

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 128
    Object       go to state 88
    ObjectPrime  go to state 89


State 91

   35 Statement: WHILE '(' . Exp ')' Statement

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 129
    Object       go to state 88
    ObjectPrime  go to state 89


State 92

   38 Statement: PRINT '(' . Exp ')' ';'
   39          | PRINT '(' . STRINGLITERAL ')' ';'

    id              shift, and go to state 77
    STRINGLITERAL   shift, and go to state 130
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 131
    Object       go to state 88
    ObjectPrime  go to state 89


State 93

   36 Statement: PRINTLN '(' . Exp ')' ';'
   37          | PRINTLN '(' . STRINGLITERAL ')' ';'

    id              shift, and go to state 77
    STRINGLITERAL   shift, and go to state 132
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 133
    Object       go to state 88
    ObjectPrime  go to state 89


State 94

   33 Statement: '{' '}' .

    $default  reduce using rule 33 (Statement)


State 95

   30 StatementList: StatementList . Statement
   32 Statement: '{' StatementList . '}'

    id       shift, and go to state 63
    RETURN   shift, and go to state 64
    IF       shift, and go to state 65
    WHILE    shift, and go to state 66
    PRINT    shift, and go to state 67
    PRINTLN  shift, and go to state 68
    '{'      shift, and go to state 69
    '}'      shift, and go to state 134

    Statement  go to state 135


State 96

   31 StatementList: Statement .

    $default  reduce using rule 31 (StatementList)


State 97

    4 MainClass: CLASS id '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' id ')' '{' Statement '}' . '}'

    '}'  shift, and go to state 136


State 98

   10 VarDecl: id . id ';'
   27 TypePrime: id . '[' ']'
   40 Statement: id . '=' Exp ';'
   41          | id . Index '=' Exp ';'

    id   shift, and go to state 29
    '['  shift, and go to state 137
    '='  shift, and go to state 75

    Index  go to state 76


State 99

   14 MethodDecl: PUBLIC Type id '(' FormalList ')' '{' VarDeclList RETURN . Exp ';' '}'
   42 Statement: RETURN . Exp ';'

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 138
    Object       go to state 88
    ObjectPrime  go to state 89


State 100

   13 MethodDecl: PUBLIC Type id '(' FormalList ')' '{' VarDeclList StatementList . RETURN Exp ';' '}'
   30 StatementList: StatementList . Statement

    id       shift, and go to state 63
    RETURN   shift, and go to state 139
    IF       shift, and go to state 65
    WHILE    shift, and go to state 66
    PRINT    shift, and go to state 67
    PRINTLN  shift, and go to state 68
    '{'      shift, and go to state 69

    Statement  go to state 135


State 101

   19 FormalRest: ',' Type . id
   21 Type: Type . '[' ']'

    id   shift, and go to state 140
    '['  shift, and go to state 50


State 102

   43 Index: '[' Exp . ']'
   45 Exp: Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . EQ Exp
   48    | Exp . NOTEQ Exp
   49    | Exp . LESSTHANEQ Exp
   50    | Exp . GREATTHANEQ Exp
   51    | Exp . '<' Exp
   52    | Exp . '>' Exp
   53    | Exp . '+' Exp
   54    | Exp . '-' Exp
   55    | Exp . '*' Exp
   56    | Exp . '/' Exp

    AND          shift, and go to state 114
    OR           shift, and go to state 115
    LESSTHANEQ   shift, and go to state 116
    GREATTHANEQ  shift, and go to state 117
    EQ           shift, and go to state 118
    NOTEQ        shift, and go to state 119
    '+'          shift, and go to state 120
    '-'          shift, and go to state 121
    '*'          shift, and go to state 122
    '/'          shift, and go to state 123
    '<'          shift, and go to state 124
    '>'          shift, and go to state 125
    ']'          shift, and go to state 141


State 103

   40 Statement: id '=' Exp . ';'
   45 Exp: Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . EQ Exp
   48    | Exp . NOTEQ Exp
   49    | Exp . LESSTHANEQ Exp
   50    | Exp . GREATTHANEQ Exp
   51    | Exp . '<' Exp
   52    | Exp . '>' Exp
   53    | Exp . '+' Exp
   54    | Exp . '-' Exp
   55    | Exp . '*' Exp
   56    | Exp . '/' Exp

    AND          shift, and go to state 114
    OR           shift, and go to state 115
    LESSTHANEQ   shift, and go to state 116
    GREATTHANEQ  shift, and go to state 117
    EQ           shift, and go to state 118
    NOTEQ        shift, and go to state 119
    '+'          shift, and go to state 120
    '-'          shift, and go to state 121
    '*'          shift, and go to state 122
    '/'          shift, and go to state 123
    '<'          shift, and go to state 124
    '>'          shift, and go to state 125
    ';'          shift, and go to state 142


State 104

   44 Index: Index '[' . Exp ']'

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86

    Exp          go to state 143
    Object       go to state 88
    ObjectPrime  go to state 89


State 105

   41 Statement: id Index '=' . Exp ';'

    id              shift, and go to state 77
    INTEGERLITERAL  shift, and go to state 78
    TRUE            shift, and go to state 79
    FALSE           shift, and go to state 80
    THIS            shift, and go to state 81
    NEW             shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '!'             shift, and go to state 85
    '('             shift, and go to state 86
